Fix CSS formatting and improve overflow handling in media queries

--- a/style.css
+++ b/style.css
@@ -115,6 +115,10 @@ a:hover {
 }
 
 @media screen and (min-width: 360px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
   body {
     background-color: white;
   }
@@ -188,7 +192,7 @@ a:hover {
     top: 600%;
     width: 1000px;
     left: 10px;
-    background-color: #252B42;
+    background-color: #252b42;
     text-align: start;
   }
   .down img {
@@ -198,7 +202,6 @@ a:hover {
     position: absolute;
     left: 10%;
     text-align: center;
-    
   }
   .footer .logo {
     visibility: hidden;
@@ -214,5 +217,4 @@ a:hover {
     height: 225px;
     top: 660%;
   }
-
 }
